# ServerAPI_Rt

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs
src/entities/: ban_record.rs  ban_records.rs  file.rs  files.rs  gallery.rs  gallery_image.rs  mod.rs  prelude.rs  server.rs  server_log.rs  server_stats.rs  server_status.rs  ticket.rs  ticket_log.rs  user.rs  user_server.rs  users.rs
src/handlers/: auth.rs  mod.rs  search.rs  servers.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/schemas/: auth.rs  mod.rs  search.rs  servers.rs
src/services/: auth.rs  database.rs  file_upload.rs  mod.rs  redis.rs  server.rs  utils.rs
src/services/email/: mod.rs  sender.rs  template.rs
src/services/search/: client.rs
templates/: email_code_verify.html
