[package]
name = "server-api-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["tokio", "http2", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database ORM
sea-orm = { version = "1.0", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "debug-print",
] }

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde", "clock"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
    "time",
] }
colored = "2.0"
atty = "0.2"
url = "2.4"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.0"
lazy_static = "1.4"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Cryptography
sha2 = "0.10"

# HTTP client (for testing)
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
# Testing
sea-orm = { version = "1.0", features = ["mock"] }
tokio-test = "0.4"
